--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,12 @@
-celery==4.1.0
-certifi==2018.1.18
+ansible==2.9.4
+cffi==1.13.2
 cryptography==2.8
-decorator==4.4.0
 Django==2.2.10
-django-admin-list-filter-dropdown==1.0.1
-django-admin-rangefilter==0.3.6
-django-advanced-filters==1.0.7.1
-django-ajax-selects==1.7.1
-django-allauth==0.35.0
-django-auditlog==0.4.5
-django-braces==1.4.0
-django-cachalot==2.1.0
-django-celery-beat==1.1.1
-django-ckeditor==5.7.0
-django-cors-headers==2.1.0
-django-cuser==2017.3.16
-django-debug-panel==0.8.3
-django-debug-toolbar==1.9.1
-django-elasticache==1.0.3
-django-filter==1.1.0
-django-jet==1.0.8
-django-js-asset==1.2.2
-django-jsonfield==1.0.1
-django-modeltranslation==0.12.2
-django-multiselectfield==0.1.8
-django-nested-admin==3.0.21
-django-phonenumber-field==2.0.1
-django-preferences==0.2
-django-prometheus==1.0.14
-django-pylibmc==0.6.1
-django-report-builder==6.0.2
-django-request-logging==0.6.7
-django-rest-auth==0.9.3
-django-silk==3.0.0
-django-simple-history==2.0
-django-storages==1.6.5
-django-tinymce==2.7.0
-django-uuidfield==0.5.0
-djangorestframework==3.7.7
-djangorestframework-recursive==0.1.2
-docutils==0.14
-drf-dynamic-fields==0.3.0
-oauth2client==4.1.3
-oauthclient==1.0.3
-oauthlib==2.0.6
+Jinja2==2.11.1
+MarkupSafe==1.1.1
 psycopg2==2.8.4
+pycparser==2.19
+pytz==2019.3
+PyYAML==5.3
+six==1.14.0
+sqlparse==0.3.0
