--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 ansible==2.9.4
+certifi==2019.11.28
 cffi==1.13.2
+chardet==3.0.4
 cryptography==2.8
 Django==2.2.10
+django-filter==2.2.0
+djangorestframework==3.11.0
+idna==2.8
 Jinja2==2.11.1
+Markdown==3.1.1
 MarkupSafe==1.1.1
 psycopg2==2.8.4
 pycparser==2.19
 pytz==2019.3
 PyYAML==5.3
+requests==2.22.0
 six==1.14.0
 sqlparse==0.3.0
+urllib3==1.25.8
