--- a/sites/racEnergy_uwsgi.ini
+++ b/sites/racEnergy_uwsgi.ini
@@ -1,15 +1,14 @@
 [uwsgi]
-chdir = /home/ubuntu/leanagri
-module = LeanAgri.wsgi
-home = /home/ubuntu/env
+chdir = /home/ubuntu/racenergy
+module = racenergy_IOT.wsgi
+home = /home/ubuntu/racEnv
 logto = /var/log/uwsgi/%n.log
 disable-write-exception=true
 
 # process-related settings
 master = true
 processes = 3
-socket = /home/ubuntu/leanagri.sock
+socket = /home/ubuntu/racenergy.sock
 chmod-socket = 666
 max-requests = 100
-env = VERSION=PROD
 
