ini changes spell mistake

--- a/sites/racEnergy_uwsgi.ini
+++ b/sites/racEnergy_uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 chdir = /home/ubuntu/racenergy
-module = racenergy_IOT.wsgi
+module = racenery_IOT.wsgi:application
 home = /home/ubuntu/racEnv
 
 
