--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.13.2
 chardet==3.0.4
 cryptography==2.8
 Django==2.2.10
+django-crispy-forms==1.8.1
 django-filter==2.2.0
 djangorestframework==3.11.0
 idna==2.8
@@ -17,4 +18,5 @@ PyYAML==5.3
 requests==2.22.0
 six==1.14.0
 sqlparse==0.3.0
+timeloop==1.0.2
 urllib3==1.25.8
